--- a/QSF.Common/QuickStart.Common.WPF.csproj
+++ b/QSF.Common/QuickStart.Common.WPF.csproj
@@ -9,10 +9,6 @@
     <RootNamespace>Telerik.Windows.Controls.QuickStart</RootNamespace>
     <AssemblyName>QuickStart.Common</AssemblyName>
     <FileAlignment>512</FileAlignment>
-     
-     
-     
-     
   </PropertyGroup>
   <PropertyGroup>
   </PropertyGroup>
@@ -87,10 +83,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Telerik.Windows.Controls">
-      <HintPath>$(TELERIKWPFDIR)\Binaries.NoXaml\WPF40\Telerik.Windows.Controls.dll</HintPath>
+      <HintPath>..\Lib\Telerik.Windows.Controls.dll</HintPath>
     </Reference>
     <Reference Include="TelerikProviderForGoogleAnalytics">
-      <HintPath>..\lib\WPF40\TelerikProviderForGoogleAnalytics.dll</HintPath>
+      <HintPath>..\Lib\TelerikProviderForGoogleAnalytics.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
